# ByzantineFaults

.git-old/: COMMIT_EDITMSG  config  index
ByzantineFaults/code/: CMakeLists.txt  Makefile  README
ByzantineFaults/code/database_file/: boinc_file
ByzantineFaults/code/files_res/: primary_1_res_3_workers_sonnek_sonnek_reputation_first_fit.csv  primary_1_res_8_workers_sonnek_sonnek_reputation_first_fit.csv  res_8_workers_arantes_symmetrical_tight_fit_arantes_replication.csv
ByzantineFaults/code/include/: additional_replication_strategy.h  client.h  client.h~  first_primary.h  group_formation_strategy.h  group_formation_strategy.h~  primary.h  primary.h~  replication_strategy.h  reputation_strategy.h  reputation_strategy.h~  simulator.h  sonnek_simulator.h  sonnek_simulator.h~  tache.h~  task.h  task.h~  worker.h  worker.h~
ByzantineFaults/code/scripts/platform_deployment_creation/: create_plat_and_dep.sh~  create_plat_dep_centralized.sh  create_plat_dep_centralized.sh~  create_plat_dep_distributed.sh  create_plat_dep_distributed.sh~
ByzantineFaults/code/src/: Create_xml_files.java  Create_xml_files_centralised.java  README  Sonnek_simulator.c~  additional_replication_strategy.c  client.c  client.c~  deployment_essai_random.xml~  essai_random.c~  first_primary.c  fromMySQLToText.c  group_formation_strategy.c  group_formation_strategy.c~  platform_essai_random.xml~  primary.c  primary.c~  replication_strategy.c  reputation_strategy.c  reputation_strategy.c~  simulator.c  simulator.c~  slave.c~  sonnek_simulator.c  sonnek_simulator.c~  worker.c  worker.c~  workers.c~
(+48 files in other folders)
